Bug 92781 - right click->change font not registered as modified document
Summary: right click->change font not registered as modified document
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-11-06 01:56 UTC by Jonathan Riddell
Modified: 2014-02-22 22:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2004-11-06 01:56:38 UTC
Version:           1.3.90 (using KDE 3.3.0,  (testing/unstable))
Compiler:          gcc version 3.3.4 (Debian 1:3.3.4-9ubuntu5)
OS:                Linux (i686) release 2.6.8.1-3-386

right click on an item
Change Font

change can't be undone

from beastie 92669
Comment 1 Oliver Kellogg 2004-11-12 08:15:47 UTC
Fixed in cvs.
Comment 2 Joris Steyn 2014-01-04 11:40:28 UTC
Reopening. Font modification again/still not registered as modified document. Also check other actions.
Comment 3 Joris Steyn 2014-02-22 22:04:05 UTC
Git commit 8da660dd301f37e6e2382da1d857a3aa3013b7e4 by Joris Steyn.
Committed on 22/02/2014 at 22:01.
Pushed by jorissteyn into branch 'master'.

Fix widget actions don't mark document as modified

The document is now marked modified for every command that is executed.

M  +2    -0    umbrello/uml.cpp

http://commits.kde.org/umbrello/8da660dd301f37e6e2382da1d857a3aa3013b7e4