Fix widget actions don't mark document as modified

The document is now marked modified for every command that is executed.

BUG: 92781